@@ -1,5 +1,12 @@
 2009-07-29  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/search_results.php: fix a query for search alerts. And changed
+	the visual result (old it was simple list items) to a detailed table for all
+	elements to search, also added pagination options for results. And make
+	some style in tabs (added images).
+
+2009-07-29  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/alerts/alert_list.php: clear and coment some parts of source
 	code. Fix bug that send more data from other forms (I forget close
 	the tag form). And change the combo box of agents to input text rich with
